// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`asymmetric visibility asymmetric visibility on constant 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "BAR",
              },
              "value": Number {
                "kind": "number",
                "value": "1",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Cannot use asymmetric visibility on constants on line 1",
      "token": undefined,
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion malformed set keyword explicit 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 1,
              "flagsSet": 4,
              "hooks": [],
              "kind": "parameter",
              "name": null,
              "nullable": false,
              "readonly": false,
              "type": Name {
                "kind": "name",
                "name": "foo",
                "resolution": "uqn",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": null,
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
    ExpressionStatement {
      "expression": undefined,
      "kind": "expressionstatement",
    },
  ],
  "errors": [
    Error {
      "expected": "set",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'foo' (T_STRING) on line 1",
      "token": "'foo' (T_STRING)",
    },
    Error {
      "expected": ")",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'foo' (T_STRING), expecting ')' on line 1",
      "token": "'foo' (T_STRING)",
    },
    Error {
      "expected": 222,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')', expecting T_VARIABLE on line 1",
      "token": "')'",
    },
    Error {
      "expected": "{",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING), expecting '{' on line 1",
      "token": "'string' (T_STRING)",
    },
    Error {
      "expected": [
        ",",
        ";",
        "=",
        "{",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        ";",
        ",",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        198,
        222,
        182,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        198,
        222,
        182,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '{' on line 1",
      "token": "'{'",
    },
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '}' on line 1",
      "token": "'}'",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion malformed set keyword shorthand 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 0,
              "flagsSet": 4,
              "hooks": [],
              "kind": "parameter",
              "name": null,
              "nullable": false,
              "readonly": false,
              "type": Name {
                "kind": "name",
                "name": "foo",
                "resolution": "uqn",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": null,
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
    ExpressionStatement {
      "expression": undefined,
      "kind": "expressionstatement",
    },
  ],
  "errors": [
    Error {
      "expected": "set",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'foo' (T_STRING) on line 1",
      "token": "'foo' (T_STRING)",
    },
    Error {
      "expected": ")",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'foo' (T_STRING), expecting ')' on line 1",
      "token": "'foo' (T_STRING)",
    },
    Error {
      "expected": 222,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')', expecting T_VARIABLE on line 1",
      "token": "')'",
    },
    Error {
      "expected": "{",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING), expecting '{' on line 1",
      "token": "'string' (T_STRING)",
    },
    Error {
      "expected": [
        ",",
        ";",
        "=",
        "{",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        ";",
        ",",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        198,
        222,
        182,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        198,
        222,
        182,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '{' on line 1",
      "token": "'{'",
    },
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '}' on line 1",
      "token": "'}'",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion private(set) shorthand 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 0,
              "flagsSet": 4,
              "hooks": [],
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": Block {
            "children": [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion protected(set) shorthand 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 0,
              "flagsSet": 2,
              "hooks": [],
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "count",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "int",
                "raw": "int",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": Block {
            "children": [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion public private(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 1,
              "flagsSet": 4,
              "hooks": [],
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": Block {
            "children": [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion public protected(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 1,
              "flagsSet": 2,
              "hooks": [],
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "url",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": Block {
            "children": [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility constructor promotion public public(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [
            Parameter {
              "attrGroups": [],
              "byref": false,
              "flags": 1,
              "flagsSet": 1,
              "hooks": [],
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
              "variadic": false,
            },
          ],
          "attrGroups": [],
          "body": Block {
            "children": [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility duplicate set modifier 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "public",
          "visibilitySet": "private",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING) on line 1",
      "token": "'string' (T_STRING)",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility duplicate static flag 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": true,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'static' (T_STATIC) on line 1",
      "token": "'static' (T_STATIC)",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility duplicate visibility 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "public",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING) on line 1",
      "token": "'string' (T_STRING)",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility ignored below PHP 8.4 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "",
              },
              "nullable": false,
              "readonly": false,
              "type": Name {
                "kind": "name",
                "name": "set",
                "resolution": "uqn",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": null,
        },
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '(' on line 1",
      "token": "'('",
    },
    Error {
      "expected": [
        198,
        222,
        182,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '(' on line 1",
      "token": "'('",
    },
    Error {
      "expected": 222,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')', expecting T_VARIABLE on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        ",",
        ";",
        "=",
        "{",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING) on line 1",
      "token": "'string' (T_STRING)",
    },
    Error {
      "expected": [
        ";",
        ",",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING) on line 1",
      "token": "'string' (T_STRING)",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility malformed set keyword in property 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "",
              },
              "nullable": false,
              "readonly": false,
              "type": Name {
                "kind": "name",
                "name": "foo",
                "resolution": "uqn",
              },
              "value": null,
            },
          ],
          "visibility": "public",
          "visibilitySet": "private",
        },
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [
    Error {
      "expected": "set",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'foo' (T_STRING) on line 1",
      "token": "'foo' (T_STRING)",
    },
    Error {
      "expected": ")",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'foo' (T_STRING), expecting ')' on line 1",
      "token": "'foo' (T_STRING)",
    },
    Error {
      "expected": 222,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')', expecting T_VARIABLE on line 1",
      "token": "')'",
    },
    Error {
      "expected": [
        ",",
        ";",
        "=",
        "{",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING) on line 1",
      "token": "'string' (T_STRING)",
    },
    Error {
      "expected": [
        ";",
        ",",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'string' (T_STRING) on line 1",
      "token": "'string' (T_STRING)",
    },
  ],
  "kind": "program",
}
`;

exports[`asymmetric visibility private(set) shorthand 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "label",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": "private",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility protected private(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "count",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "int",
                "raw": "int",
              },
              "value": null,
            },
          ],
          "visibility": "protected",
          "visibilitySet": "private",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility protected(set) shorthand 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "value",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "int",
                "raw": "int",
              },
              "value": null,
            },
          ],
          "visibility": "",
          "visibilitySet": "protected",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility public private(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "public",
          "visibilitySet": "private",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility public protected(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "url",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "public",
          "visibilitySet": "protected",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`asymmetric visibility public static private(set) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        PropertyStatement {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": true,
          "kind": "propertystatement",
          "properties": [
            Property {
              "attrGroups": [],
              "hooks": [],
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "name",
              },
              "nullable": false,
              "readonly": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "string",
                "raw": "string",
              },
              "value": null,
            },
          ],
          "visibility": "public",
          "visibilitySet": "private",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
